--- a/VRChat/54/1214954.html
+++ b/VRChat/54/1214954.html
@@ -75,27 +75,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/d4c0d5357203fd37a6c0.js" defer=
     "defer" nonce=
-    "6v3spl1boEGuN7kzqm5zvqZ4hYvMqHobghVjiAPB1i8="></script>
+    "gjHQ5AsWSWXBKPYcU2SRHoiid/AtcUYRAOgx1TkLaRA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ギルティソード","description":"～その剣は、すべての罪を切り裂く剣～\n\n\nポリゴン数 △568\nテクスチャ、ノーマルマップがセットのunitypackage\n\n無料版と有料版に違いはありません。\n\nVRChat想定ですがその他3Dゲーム、ソフトにも使用可能です。\n\n改変、再配布等もご自由に行って構いません。\n\n","url":"https://booth.pm/ja/items/1214954","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b96a0129-aca5-4325-bfe4-0d8a349c5b10/i/1214954/ac0cdc5c-c8c8-4710-8017-0e6306e5b94d_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6v3spl1boEGuN7kzqm5zvqZ4hYvMqHobghVjiAPB1i8="></script>
+    nonce="gjHQ5AsWSWXBKPYcU2SRHoiid/AtcUYRAOgx1TkLaRA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -634,7 +656,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;},{&quot;label&quot;:&quot;超COMIC CITY ONLINE-230825-&quot;,&quot;value&quot;:&quot;comiccity-online-230825&quot;}]"
+    "[{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
